Deployment/gateway_service/gateway_deployment_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  gateway
  namespace: abed-roost
  labels:
    app:  gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app:  gateway
    spec:
      containers:
      - name:  gateway
        image:  abdalrhmanalkraien/gateway-service:latest
        ports:
        - containerPort:  8080
          name:  gateway
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: abed-roost
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
  - name: gateway
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30012
